NOCC 0.9.6    ??, 2002

    * A few small cosmetic fixes (Paulo Matos)
    * Attachment array being initialised as integer zero (Paulo Matos)
    * Fixed MIME line termination incompliance with RFC822 (Paulo Matos)
    * Removed 'delete_button_icon' option, as it didn't work. (#575741)
    * Rewrote 'prefs.php' as 'user_prefs.php'.
    * Added a function 'get_default_from_address' to allow admins to
      customise the default address in their conf.php. (#563396)
    * A whole load of tidying up of the folder-related code.
    * Changed the way prefs functions return exceptions.
    * Improved the exception reporting from the nocc_imap class.
    * Added 'seperate_msg_win' user preference. (#548360)
    * Check for valid e-mail address when changing preferences. (#506379)
    * Use $_SERVER['PHP_SELF'] instead of $PHP_SELF (for register_globals=off)
    * Return user to INBOX when mail sent successfully.
    * Now works with 'register_globals=off' (i.e. new PHP 4.2 behaviour).
    * Relaxed debugging flags to allow connection messages to be reported
      via imap_last_error.
    * Fixed attachments bug [#509857]. Thanks crystalcyril.
    * Simplified handling of attachments, removed 'num_attach' stuff.
    * Switched from 'X-Mailer' header to 'User-Agent' [#547441]
    * Added folder management to pref page.
    * Added Folder and Page selection to inbox page.
    * Added status bar to give links to folders containing new mesages.
    * Removed 'conf', 'mailhost', 'user' and 'passwd' from aff_mail arguments.
    * Renamed 'change_date' to 'format_date' and simplified it.
    * Trimmed unnecessary passing of session variables to some functions.
    * Moved common stuff out of conf.php into a new 'common.php' file.
    * Include functions and check_lang in common, rather than in every script.
    * Replaced session_* calls with use of $_SESSION[].
    * Store more stuff in session, to save passing them around in the URL all