@@ -1,4 +1,4 @@
-<!-- start of $Id: prefs.php,v 1.27 2002/09/10 23:27:01 mrylander Exp $ -->
+<!-- start of $Id: prefs.php,v 1.28 2002/09/16 00:43:25 mrylander Exp $ -->
 <table border="0" align="center" cellpadding="0" cellspacing="0" width="100%">
     <tr>
         <td bgcolor="<?php echo $glob_theme->inside_color ?>">
@@ -9,58 +9,58 @@
                 <tr>
                     <td align="right" class="prefs" valign="top"><?php echo $html_full_name ?> : </td>
                     <td align="left" class="prefs">
-                        <input type="text" name="full_name" value="<?php echo $user_prefs->full_name ?>" size="40"/>
+                        <input type="text" name="full_name" value="<?php echo (isset($user_prefs->full_name)) ? $user_prefs->full_name : "" ?>" size="40"/>
                     </td>
                 </tr>
                 <?php if ($conf->allow_address_change) { ?>
                 <tr>
                     <td align="right" class="prefs" valign="top"><?php echo $html_email_address ?> : </td>
                     <td align="left" class="prefs">
-                        <input type="text" name="email_address" value="<?php echo $user_prefs->email_address ?>" size="40"/>
+                        <input type="text" name="email_address" value="<?php echo (isset($user_prefs->email_address)) ? $user_prefs->email_address : get_default_from_address() ?>" size="40"/>
                     </td>
                 </tr>
                 <?php } ?>
                 <tr>
                     <td align="right" class="prefs" valign="top"><?php echo $html_msgperpage ?></td>
                     <td align="left" class="prefs" valign="top">
-                        <input type="text" name="msg_per_page" value="<?php echo $user_prefs->msg_per_page ?>" size="3" maxlength="3"/>
+                        <input type="text" name="msg_per_page" value="<?php echo (isset($user_prefs->msg_per_page)) ? $user_prefs->msg_per_page : $conf->msg_per_page ?>" size="3" maxlength="3"/>
                     </td>
                 </tr>
                 <tr>
                     <td align="right" class="prefs" valign="top">&nbsp; </td>
                     <td align="left" class="prefs">
-                        <input type="checkbox" name="cc_self" id="cc_self" value="on" <?php if($user_prefs->cc_self) echo "checked"; ?> /><label for="cc_self"><?php echo $html_ccself ?></label>
+                        <input type="checkbox" name="cc_self" id="cc_self" value="on" <?php if(isset($user_prefs->cc_self) && $user_prefs->cc_self) echo "checked"; ?> /><label for="cc_self"><?php echo $html_ccself ?></label>
                     </td>
                 </tr>
                 <tr>
                     <td align="right" class="prefs" valign="top">&nbsp;</td>
                     <td align="left" class="prefs">
-                        <input type="checkbox" name="hide_addresses" id="hide_addresses" value="on" <?php if($user_prefs->hide_addresses) echo "checked"; ?> /><label for="hide_addresses"><?php echo $html_hide_addresses ?></label>
+                        <input type="checkbox" name="hide_addresses" id="hide_addresses" value="on" <?php if(isset($user_prefs->hide_addresses) && $user_prefs->hide_addresses) echo "checked"; ?> /><label for="hide_addresses"><?php echo $html_hide_addresses ?></label>
                     </td>
                 </tr>
                 <tr>
                     <td align="right" class="prefs" valign="top">&nbsp;</td>
                     <td align="left" class="prefs">
-                        <input type="checkbox" name="outlook_quoting" id="outlook_quoting" value="on" <?php if($user_prefs->outlook_quoting) echo "checked"; ?> /><label for="outlook_quoting"><?php echo $html_outlook_quoting ?></label>
+                        <input type="checkbox" name="outlook_quoting" id="outlook_quoting" value="on" <?php if(isset($user_prefs->outlook_quoting) && $user_prefs->outlook_quoting) echo "checked"; ?> /><label for="outlook_quoting"><?php echo $html_outlook_quoting ?></label>
                     </td>
                 </tr>
                 <tr>
                     <td align="right" class="prefs" valign="top">&nbsp;</td>
                     <td align="left" class="prefs">
-                        <input type="checkbox" name="seperate_msg_win" id="seperate_msg_win" value="on" <?php if($user_prefs->seperate_msg_win) echo "checked"; ?> /><label for="seperate_msg_win"><?php echo $html_seperate_msg_win ?></label>
+                        <input type="checkbox" name="seperate_msg_win" id="seperate_msg_win" value="on" <?php if(isset($user_prefs->seperate_msg_win) && $user_prefs->seperate_msg_win) echo "checked"; ?> /><label for="seperate_msg_win"><?php echo $html_seperate_msg_win ?></label>
                     </td>
                 </tr>
                 <?php if($conf->enable_reply_leadin) { ?>
                 <tr>
                     <td align="right" class="prefs" valign="top"><?php echo $html_reply_leadin ?> : </td>
                     <td align="left" class="prefs">
-                        <input type="text" name="reply_leadin" value="<?php echo $user_prefs->reply_leadin ?>" size="40"/>
+                        <input type="text" name="reply_leadin" value="<?php echo (isset($user_prefs->reply_leadin)) ? $user_prefs->reply_leadin : "" ?>" size="40"/>
                 </tr>
                 <?php } ?>
                 <tr>
                     <td align="right" class="prefs" valign="top"><?php echo $html_signature ?> : </td>
                     <td align="left" class="prefs">
-                        <textarea name="signature" rows="5" cols="40"><?php echo $user_prefs->signature ?></textarea>
+                        <textarea name="signature" rows="5" cols="40"><?php echo (isset($user_prefs->signature)) ? $user_prefs->signature : "" ?></textarea>
                     </td>
                 </tr>
                 <tr>
@@ -98,4 +98,4 @@
     ?>
 
 </table>
-<!-- end of $Id: prefs.php,v 1.27 2002/09/10 23:27:01 mrylander Exp $ -->
+<!-- end of $Id: prefs.php,v 1.28 2002/09/16 00:43:25 mrylander Exp $ -->
