@@ -1,5 +1,7 @@
 NOCC 0.9.6    ??, 2002
 
+    * Fixed some warnings when not using user_prefs or user_filters.
+      (Paulo Matos)
     * A few small cosmetic fixes (Paulo Matos)
     * Attachment array being initialised as integer zero (Paulo Matos)
     * Fixed MIME line termination incompliance with RFC822 (Paulo Matos)
